# credit-scoring-on-credit-history

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/data_load/: data_load.yaml
conf/infer/: infer.yaml
conf/logger/: logger.yaml
conf/model/: model.yaml
conf/preprocess/: preprocess.yaml
conf/train/: train.yaml
credit_scoring/: .gitignore  __init__.py  constants.py  data_preprocessing.py  dataloader_utils.py  dataset.py  infer.py  model.py  train.py  typing_custom.py
credit_scoring/dvc_utils/: dvc_load.py
credit_scoring/pl_utils/: credit_rnn_model.py  data.py  dataloader_utils.py  experiment.py  model.py  preprocessing.py  typing_custom.py
data/: .gitignore  test_data.dvc  train_data.dvc  train_target.csv.dvc
docs/: conf.py  credit_scoring.rst  index.rst  modules.rst
model_checkpoints/: rnn-model-0.dvc
