[project]
name = "credit-scoring-on-credit-history"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchtyping>=0.1.5",
    "tqdm>=4.67.1",
]
