[project]
name = "credit-scoring-on-credit-history"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchtyping>=0.1.5",
    "tqdm>=4.67.1",
]

[tool.uv.build-backend]
module-name = "credit_scoring"
module-root = "."

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"


[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["credit_scoring"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90

[dependency-groups]
dev = [
    "dvc>=3.63.0",
    "mlflow>=3.3.2",
    "omegaconf>=2.3.0",
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "rich>=14.1.0",
    "sphinx>=8.2.3",
]
